--- a/README.adoc
+++ b/README.adoc
@@ -34,6 +34,9 @@ include::step-8/README.adoc[]
 :imagesdir: step-9
 include::step-9/README.adoc[]
 
+:imagesdir: step-10
+include::step-10/README.adoc[]
+
 :imagesdir: outro
 include::outro/README.adoc[]
 
