--- a/outline.adoc
+++ b/outline.adoc
@@ -40,3 +40,11 @@ Access control and security
 == Step 8
 
 Refactor to RxJava.
+
+== Step 9
+
+Client-side web application using AngularJS.
+
+== Step 10
+
+Cross-border messaging: sending and receiving event bus messages on the browser
