--- a/step-2/README.adoc
+++ b/step-2/README.adoc
@@ -12,7 +12,7 @@ Still, its implementation suffers from the following issues:
 
 This second iteration is about refactoring the code into independent and reusable verticles:
 
-image::images/verticles-refactoring.svg[Verticles refactoring]
+image::images/verticles-refactoring.png[Verticles refactoring]
 
 We will deploy 2 verticles to deal with HTTP requests, and 1 verticle for encapsulating persistence through the database.
 The 2 resulting verticles will not have direct references to each other as they will only agree on destination names in the event bus as well as message formats.
